Cleaned the code for UI, fixed navHandler
add variable for each value used in xml and rename symbol in drawable with prefix
fix bug and add navhandler to viewReportActivity
move report activity to package

--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.spenditure.presentation.ViewReportActivity">
+    tools:context="com.spenditure.presentation.report.ViewReportActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
-                android:src="@drawable/top_background"
+                android:src="@drawable/background_top"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/section_holder"
+
                     android:orientation="vertical">
 
                     <TextView
@@ -102,7 +102,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/gradient_backgroud_light_blue" />
+                        app:srcCompat="@drawable/background_light_blue" />
 
                     <ImageView
                         android:id="@+id/imageView3"
@@ -113,7 +113,7 @@
                         android:layout_marginEnd="16dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
-                        app:srcCompat="@drawable/chart_line_solid" />
+                        app:srcCompat="@drawable/symbol_chartline" />
 
                     <TextView
                         android:id="@+id/textView5"
