--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.spenditure.presentation.ViewReportActivity">
+    tools:context="com.spenditure.presentation.report.ViewReportActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,11 +18,11 @@
 
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageView_holder_report"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
-                android:src="@drawable/top_background"
+                android:src="@drawable/background_top"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,22 +34,22 @@
                 android:layout_height="wrap_content"
                 android:text="Spenditure"
                 android:textColor="@color/white"
-                android:textSize="@dimen/app_tittle"
+                android:textSize="@dimen/medium_size"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-                app:layout_constraintEnd_toEndOf="@+id/imageView2"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView_holder_report"
+                app:layout_constraintEnd_toEndOf="@+id/imageView_holder_report"
                 app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="@+id/imageView2"
-                app:layout_constraintTop_toTopOf="@+id/imageView2"
+                app:layout_constraintStart_toStartOf="@+id/imageView_holder_report"
+                app:layout_constraintTop_toTopOf="@+id/imageView_holder_report"
                 app:layout_constraintVertical_bias="0.0" />
 
             <LinearLayout
                 android:layout_width="200dp"
-                android:layout_height="30dp"
+                android:layout_height="40dp"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView_holder_report"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/imageView2">
+                app:layout_constraintStart_toStartOf="@+id/imageView_holder_report">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -64,7 +64,7 @@
                         android:gravity="center"
                         android:text="Report"
                         android:textColor="@color/white"
-                        android:textSize="20sp"
+                        android:textSize="@dimen/normal_size"
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
@@ -100,7 +100,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/gradient_backgroud_light_blue" />
+                        app:srcCompat="@drawable/background_light_blue" />
 
                     <ImageView
 
@@ -116,7 +116,7 @@
                         app:layout_constraintStart_toStartOf="@+id/imageview_summary_report"
                         app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/bar_report_grey" />
+                        app:srcCompat="@drawable/symbol_barplot" />
 
                     <ImageView
 
@@ -129,7 +129,7 @@
                         android:alpha="0.1"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
-                        app:srcCompat="@drawable/banking_report_grey" />
+                        app:srcCompat="@drawable/symbol_banking" />
 
                     <ImageView
 
@@ -140,7 +140,7 @@
                         app:layout_constraintEnd_toEndOf="@+id/imageView_report_summary_check"
                         app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
                         app:layout_constraintVertical_bias="0.309"
-                        app:srcCompat="@drawable/check_report_grey" />
+                        app:srcCompat="@drawable/symbol_check" />
 
                     <ImageView
 
@@ -153,7 +153,7 @@
                         app:layout_constraintEnd_toStartOf="@+id/textview_summary_report_long"
                         app:layout_constraintTop_toTopOf="@+id/imageview_summary_report"
                         app:layout_constraintVertical_bias="0.681"
-                        app:srcCompat="@drawable/check_report_grey" />
+                        app:srcCompat="@drawable/symbol_check" />
 
                     <TextView
                         android:id="@+id/textview_summary_report_short"
@@ -162,7 +162,7 @@
 
                         android:text="You've spent 15 000 CAD"
                         android:textColor="@color/white"
-                        android:textSize="30sp"
+                        android:textSize="@dimen/normal_size"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
                         app:layout_constraintEnd_toEndOf="@+id/imageview_summary_report"
@@ -178,7 +178,7 @@
 
                         android:text="You've made 500 transactions"
                         android:textColor="@color/white"
-                        android:textSize="30sp"
+                        android:textSize="@dimen/normal_size"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/imageview_summary_report"
                         app:layout_constraintEnd_toEndOf="@+id/imageview_summary_report"
@@ -208,7 +208,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/gradient_backgroud_light_blue" />
+                        app:srcCompat="@drawable/background_light_blue" />
 
                     <ImageView
 
@@ -224,7 +224,7 @@
                         app:layout_constraintStart_toStartOf="@+id/imageview_customize_report"
                         app:layout_constraintTop_toTopOf="@+id/imageview_customize_report"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/bar_report_grey" />
+                        app:srcCompat="@drawable/symbol_barplot" />
 
                     <Spinner
                         android:id="@+id/spinner_report"
@@ -247,7 +247,7 @@
 
                         android:text="Mostly spending on Food"
                         android:textColor="@color/white"
-                        android:textSize="30sp"
+                        android:textSize="@dimen/normal_size"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/imageview_customize_report"
                         app:layout_constraintEnd_toEndOf="@+id/imageview_customize_report"
@@ -262,7 +262,7 @@
 
                         android:text="Least spending on Grocery"
                         android:textColor="@color/white"
-                        android:textSize="30sp"
+                        android:textSize="@dimen/normal_size"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="@+id/imageview_customize_report"
                         app:layout_constraintEnd_toEndOf="@+id/imageview_customize_report"
@@ -282,7 +282,7 @@
                         app:layout_constraintEnd_toEndOf="@+id/imageView_report_summary_check_custom"
                         app:layout_constraintTop_toTopOf="@+id/imageview_customize_report"
                         app:layout_constraintVertical_bias="0.375"
-                        app:srcCompat="@drawable/check_report_grey" />
+                        app:srcCompat="@drawable/symbol_check" />
 
                     <ImageView
 
@@ -295,7 +295,7 @@
                         app:layout_constraintEnd_toStartOf="@+id/textview_custom_report_long"
                         app:layout_constraintTop_toTopOf="@+id/imageview_customize_report"
                         app:layout_constraintVertical_bias="0.687"
-                        app:srcCompat="@drawable/check_report_grey" />
+                        app:srcCompat="@drawable/symbol_check" />
 
                     <ImageView
 
@@ -310,7 +310,7 @@
                         app:layout_constraintStart_toStartOf="@+id/imageview_customize_report"
                         app:layout_constraintTop_toTopOf="@+id/imageview_customize_report"
                         app:layout_constraintVertical_bias="0.0"
-                        app:srcCompat="@drawable/hand_holding_dollar_solid" />
+                        app:srcCompat="@drawable/symbol_holding_dollar" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
