--- a/app/src/main/res/layout/activity_view_category.xml
+++ b/app/src/main/res/layout/activity_view_category.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.spenditure.presentation.ViewReportActivity">
+    tools:context="com.spenditure.presentation.report.ViewReportActivity">
 
 
     <LinearLayout
@@ -25,7 +25,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
 
-                android:src="@drawable/top_background"
+                android:src="@drawable/background_top"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
 
             <LinearLayout
                 android:layout_width="200dp"
-                android:layout_height="30dp"
+                android:layout_height="40dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
                         android:gravity="center"
                         android:text="Category"
                         android:textColor="@color/white"
-                        android:textSize="20sp"
+                        android:textSize="@dimen/normal_size"
                         android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
@@ -112,7 +112,7 @@
         android:tint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/baseline_add_24" />
+        app:srcCompat="@drawable/symbol_add" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
