--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -7,7 +7,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="@dimen/radius_2"
         app:cardElevation="0dp"
 
         >
@@ -15,18 +15,22 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingHorizontal="@dimen/space_5"
+
 
             >
 
             <TextView
+
+                android:textAlignment="center"
                 android:id="@+id/category_card_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/gradient_backgroud_light_blue"
-                android:padding="10dp"
+                android:background="@drawable/background_light_blue"
+                android:padding="@dimen/space_2"
                 android:text="Category 1"
                 android:textColor="@color/white"
-                android:textSize="32dp"
+                android:textSize="@dimen/normal_size"
                 android:textStyle="bold"
 
                 app:layout_constraintBottom_toBottomOf="parent"
