--- a/app/src/main/res/layout/report_slide.xml
+++ b/app/src/main/res/layout/report_slide.xml
@@ -5,16 +5,17 @@
     android:orientation="vertical"
     android:gravity="center"
     android:id="@+id/report_slider_layout"
-    android:background="@color/black">
+    android:background="@color/black"
+    >
     <TextView
         android:text="Title"
         android:id="@+id/slide_tittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:paddingTop="8dp"
+        android:paddingTop="@dimen/space_1"
         android:textStyle="bold"
-        android:textSize="30sp"
+        android:textSize="@dimen/normal_size"
         />
 
     <GridLayout
