Update dark theme
Dark theme is applied for Report and Category Activity
adding UI for last year report, spinner for custom part

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="space_3">30dp</dimen>
     <dimen name="space_4">40dp</dimen>
     <dimen name="space_5">50dp</dimen>
+    <dimen name="space_6">100dp</dimen>
 
     <dimen name="radius_2">20dp</dimen>
 </resources>
