--- a/app/src/main/res/drawable/background_top.xml
+++ b/app/src/main/res/drawable/background_top.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:bottomLeftRadius="1000dp" android:bottomRightRadius="1000dp"/>
-            <gradient android:startColor="#1D1C20" android:endColor="#1D1C20" android:angle="0"/>
+            <gradient android:startColor="#455ADC" android:endColor="#18299E" android:angle="0"/>
         </shape>
     </item>
 </selector>
