--- a/app/src/main/res/drawable/background_yellow.xml
+++ b/app/src/main/res/drawable/background_yellow.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="50dp"/>
-            <gradient android:startColor="#455ADC" android:endColor="#18299E" android:angle="0"/>
+            <gradient android:startColor="#00C5F2" android:endColor="#00C5F2" android:angle="1"/>
         </shape>
     </item>
 </selector>
