--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/background_color">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -326,8 +327,306 @@
                     android:layout_marginHorizontal="50dp"
                     />
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="24dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Last year"
+                    android:textAlignment="center"
+                    android:paddingHorizontal="@dimen/space_2"
+                    android:layout_marginHorizontal="@dimen/space_6"
+                    android:textColor="@color/dark_blue"
+                    android:textSize="@dimen/normal_size"
+                    android:textStyle="bold"
+                    />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_marginHorizontal="50dp"
+                    android:id="@+id/report_last_year"
+                    android:orientation="vertical"
+                    android:background="@drawable/background_dark_blue"
+                    >
+
+                    <GridLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:rowCount="2"
+                        android:columnCount="2"
+                        >
+
+                        <!-- First quarter -->
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/symbol_doc" />
+
+                            <TextView
+                                android:id="@+id/textview_catReport_transactionsCount"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="20 transactions"
+                                android:textSize="@dimen/normal_size"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"/>
+
+                        </LinearLayout>
+
+                        <!-- Second quarter -->
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:src="@drawable/symbol_addchart"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+                                android:id="@+id/textview_catReport_total"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="$1000 CAD"
+                                android:textSize="@dimen/normal_size"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"/>
+
+                        </LinearLayout>
+
+                        <!-- Third quarter -->
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:src="@drawable/symbol_calculate"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+                                android:id="@+id/textview_catReport_average"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="100 CAD"
+                                android:textSize="@dimen/normal_size"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"/>
 
 
+                        </LinearLayout>
+
+                        <!-- Fourth quarter -->
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:src="@drawable/symbol_pie_chart"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+                                android:id="@+id/textview_catReport_percentage"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="20 %"
+                                android:textSize="@dimen/normal_size"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"/>
+
+                        </LinearLayout>
+
+
+
+                    </GridLayout>
+
+
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_marginHorizontal="50dp"
+
+                    android:orientation="vertical">
+
+                    <Spinner
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="24dp"
+                        android:pointerIcon="grabbing"
+                       />
+
+                    <GridLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:rowCount="2"
+                        android:columnCount="2"
+                        android:background="@drawable/background_light_blue"
+                        >
+
+                        <!-- First quarter -->
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/symbol_doc" />
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="20 transactions"
+                                android:textSize="@dimen/normal_size"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"/>
+
+                        </LinearLayout>
+
+                        <!-- Second quarter -->
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:src="@drawable/symbol_addchart"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="$1000 CAD"
+                                android:textSize="@dimen/normal_size"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"/>
+
+                        </LinearLayout>
+
+                        <!-- Third quarter -->
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:src="@drawable/symbol_calculate"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="100 CAD"
+                                android:textSize="@dimen/normal_size"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"/>
+
+
+                        </LinearLayout>
+
+                        <!-- Fourth quarter -->
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_rowWeight="1"
+                            android:layout_columnWeight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+
+                            <ImageView
+
+                                android:layout_width="100dp"
+                                android:layout_height="100dp"
+                                android:src="@drawable/symbol_pie_chart"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="20 %"
+                                android:textSize="@dimen/normal_size"
+                                android:textColor="@color/white"
+                                android:textStyle="bold"/>
+
+                        </LinearLayout>
+
+
+
+                    </GridLayout>
+
+                </LinearLayout>
+
+
+
+
+                <!-- This is a holder -->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp" />
 
             </LinearLayout>
 
@@ -344,10 +643,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/nav_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
