--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,9 @@
     <color name="green_dark">#81b29a</color>
     <color name="green_light">#00f5d4</color>
     <color name="pink">#f15bb5</color>
+    <color name="dark_blue">#016bb2</color>
+    <color name="background_color">#01013F</color>
+    <color name="nav_color">#CFD3F0</color>
+    <color name="light_blue">#06c1f0</color>
 
 </resources>
