Update UI for feature 4
Add all UI components for feature 4
Note: static UI.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="background_color">#01013F</color>
     <color name="nav_color">#CFD3F0</color>
     <color name="light_blue">#06c1f0</color>
+    <color name="grey_silver">#DDDDDD</color>
 
 </resources>
