--- a/app/src/main/res/layout/activity_create_transaction.xml
+++ b/app/src/main/res/layout/activity_create_transaction.xml
@@ -112,7 +112,7 @@
         android:layout_height="wrap_content"
         android:text="@string/field_type"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/textview_comments"
+        app:layout_constraintBottom_toTopOf="@+id/textview_categories"
         app:layout_constraintEnd_toStartOf="@+id/togglebutton_type"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_amount" />
@@ -126,32 +126,10 @@
         android:textOn="Withdrawal"
         android:textOff="Deposit"
         android:checked="true"
-        app:layout_constraintBottom_toTopOf="@+id/edittext_comments"
+        app:layout_constraintBottom_toTopOf="@+id/edittext_categories"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textview_type"
         app:layout_constraintTop_toBottomOf="@+id/edittext_amount"/>
-
-    <TextView
-        android:id="@+id/textview_comments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/field_comments"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/textview_categories"
-        app:layout_constraintEnd_toStartOf="@+id/edittext_comments"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_type" />
-
-    <EditText
-        android:id="@+id/edittext_comments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="120dp"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/edittext_categories"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textview_comments"
-        app:layout_constraintTop_toBottomOf="@+id/togglebutton_type"/>
 
     <TextView
         android:id="@+id/textview_categories"
@@ -159,21 +137,43 @@
         android:layout_height="wrap_content"
         android:text="@string/field_categories"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
+        app:layout_constraintBottom_toTopOf="@+id/textview_comments"
         app:layout_constraintEnd_toStartOf="@+id/edittext_categories"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_comments" />
+        app:layout_constraintTop_toBottomOf="@+id/textview_type" />
+
+    <Spinner
+        android:id="@+id/spinner_categories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="120dp"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/edittext_comments"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textview_categories"
+        app:layout_constraintTop_toBottomOf="@+id/togglebutton_type"/>
+
+    <TextView
+        android:id="@+id/textview_comments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/field_comments"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_comments"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_categories" />
 
     <EditText
-        android:id="@+id/edittext_categories"
+        android:id="@+id/edittext_comments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="120dp"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textview_categories"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_comments"/>
+        app:layout_constraintStart_toEndOf="@+id/textview_comments"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_categories"/>
 
     <Button
         android:id="@+id/button_create_transaction"
