--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -773,7 +773,7 @@
                                     android:src="@drawable/symbol_doc" />
 
                                 <TextView
-
+                                    android:id="@+id/textview_customTime_totalTrans"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="20 transactions"
@@ -800,7 +800,7 @@
                                     android:layout_gravity="center"/>
 
                                 <TextView
-
+                                    android:id="@+id/textview_customTime_totalAmount"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="$1000 CAD"
@@ -827,7 +827,7 @@
                                     android:layout_gravity="center"/>
 
                                 <TextView
-
+                                    android:id="@+id/textview_customTime_average"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="100 CAD"
@@ -855,7 +855,7 @@
                                     android:layout_gravity="center"/>
 
                                 <TextView
-
+                                    android:id="@+id/textview_customTime_percentage"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="20 %"
