Work done to xml for Profile and Login activities

--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -10,7 +10,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/background_color">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -96,13 +97,27 @@
                     android:layout_height="wrap_content"
                     android:text="@string/label_username"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/small_size"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
+                    app:layout_constraintEnd_toStartOf="@+id/editview_username"
                     app:layout_constraintHorizontal_bias="0.13"
                     app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.243" />
+
+                <EditText
+                    android:id="@+id/editview_username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/small_size"
+                    android:width="150dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
+                    app:layout_constraintStart_toEndOf="@+id/textview_username"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.243"
+                    />
 
                 <TextView
                     android:id="@+id/textview_password"
@@ -110,13 +125,27 @@
                     android:layout_height="wrap_content"
                     android:text="@string/label_password"
                     android:textColor="@color/white"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/small_size"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
                     app:layout_constraintHorizontal_bias="0.13"
                     app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                     app:layout_constraintTop_toBottomOf="@+id/textview_username"
-                    app:layout_constraintVertical_bias="0.743" />
+                    app:layout_constraintVertical_bias="0.63" />
+
+                <EditText
+                    android:id="@+id/editview_password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/small_size"
+                    android:width="150dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
+                    app:layout_constraintStart_toEndOf="@+id/textview_password"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.85"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -130,7 +159,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/nav_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
