Login UI alignment

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,9 +74,10 @@
                     android:text="@string/label_username"
                     android:textColor="@color/white"
                     android:textSize="@dimen/small_size"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginStart="15dp"
+                    app:layout_constraintBottom_toTopOf="@+id/textview_password"
                     app:layout_constraintEnd_toStartOf="@+id/edittext_username"
-                    app:layout_constraintHorizontal_bias="0.13"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.243" />
@@ -102,9 +103,10 @@
                     android:text="@string/label_password"
                     android:textColor="@color/white"
                     android:textSize="@dimen/small_size"
+                    android:layout_marginStart="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/imageview_edit_credentials"
-                    app:layout_constraintHorizontal_bias="0.13"
+                    app:layout_constraintEnd_toStartOf="@+id/edittext_password"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/imageview_edit_credentials"
                     app:layout_constraintTop_toBottomOf="@+id/textview_username"
                     app:layout_constraintVertical_bias="0.63" />
