--- a/app/src/main/res/layout/activity_image_capture.xml
+++ b/app/src/main/res/layout/activity_image_capture.xml
@@ -11,21 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/button_take_image"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="100dp"
         android:text="@string/label_take_image"
+        android:src="@drawable/symbol_camera"
+        android:backgroundTint="@color/light_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
     <Button
         android:id="@+id/button_confirm"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="100dp"
         android:text="@string/label_confirm"
         android:visibility="invisible"
+        android:backgroundTint="@color/light_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
