--- a/app/src/main/res/layout/activity_custom_security_question_spinner.xml
+++ b/app/src/main/res/layout/activity_custom_security_question_spinner.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_blue"
+    android:background="#455ADC"
     tools:context=".presentation.CustomSecurityQuestionSpinnerActivity">
 
     <TextView
@@ -13,6 +13,7 @@
         android:textSize="25dp"
         android:textColor="@color/white"
         android:layout_margin="5dp"
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
