Create Goal page work, not tested yet

--- a/app/src/main/res/layout/activity_create_goal.xml
+++ b/app/src/main/res/layout/activity_create_goal.xml
@@ -165,7 +165,7 @@
                 android:text="@string/field_categories"
                 android:textSize="25dp"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
+                app:layout_constraintBottom_toTopOf="@+id/button_create_goal"
                 app:layout_constraintEnd_toStartOf="@+id/spinner_categories"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textview_amount" />
@@ -178,13 +178,13 @@
                 android:minHeight="30dp"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/light_blue"
-                app:layout_constraintBottom_toTopOf="@+id/button_create_transaction"
+                app:layout_constraintBottom_toTopOf="@+id/button_create_goal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textview_categories"
                 app:layout_constraintTop_toBottomOf="@+id/edittext_amount"/>
 
             <Button
-                android:id="@+id/button_create_transaction"
+                android:id="@+id/button_create_goal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/title_create_goal"
